src/objects/VendorBookingConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_of_execution__c</fullName>
        <label>Order of execution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VendorBookingConfig</label>
</CustomObject>